<resources>
    <string name="app_name">Medify</string>
    <string name="channel_name">Medication reminder</string>

    <string name="hint_name">Medication name</string>
    <string name="hint_description">Intake instructions</string>
    <string name="alerts">Alerts</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="loading">Loading…</string>
    <string name="settings">Settings</string>

    <string name="remove_medication_title">Removing medication</string>
    <string name="remove_medication">Do you really want do remove this medication?</string>

    <string name="db_fetching_error">There was an error fetching the medication.</string>
    <string name="ean_error">Can\'t fetch the product name.</string>
    <string name="ean_empty">Product was not found in the database.</string>
    <string name="internet_error">Please establish an internet connection.</string>

    <string name="weekday_monday">Mon</string>
    <string name="weekday_tuesday">Tue</string>
    <string name="weekday_wednesday">Wed</string>
    <string name="weekday_thursday">Thu</string>
    <string name="weekday_friday">Fri</string>
    <string name="weekday_saturday">Sat</string>
    <string name="weekday_sunday">Sun</string>

    <string name="add_alert">Add alert</string>

    <string name="weekday_empty_warning">At least one weekday must be selected.</string>
    <string name="alert_deletion_message">Alert was deleted.</string>
    <string name="medication_name_empty_warning">Please add a medication name.</string>
    <string name="alerttimestamps_empty_warning">Please add an alert.</string>
    <string name="next_alert">Next alert</string>
    <string name="at">at</string>

    <string name="reminder_text">It\'s time to take %1$s!</string>
    <string name="camera_permission">To use the Barcode Scanner you must permit the app to use your camera.</string>
    <string name="camera_denied">You\'ve denied the camera-permission that the app needs for the Barcode Scanner. You\'ve denied a permission that the app needs for core functionality.</string>
    <string name="no_medication_hint">No medications are recorded.\nAdd some by touching the button at the bottom.</string>
</resources>